@@ -196,7 +196,7 @@ app.post('/login', async (req, res) => {
     });
   } catch (error) {
     console.error('Login error:', error);
-    res.status(500).render('pages/login', { message: "Something went wrong. Please try again later." });
+    res.status(500).render('pages/login', { message: "Account does not exist. Please register below!" });
   }
 });
 
@@ -219,25 +219,8 @@ app.post('/register', async (req, res) => {
   }
 });
 
-app.get('/orderhistory', async (req, res) => {
-  if (!req.session.user) {
-      return res.redirect('/login');
-  }
-
-  try {
-      const orders = await db.any(
-          'SELECT s.company_name as stock_name, s.symbol, t.price, t.quantity, t.transaction_type as type, t.transaction_date as created_at FROM transactions t JOIN stocks s ON t.stock_id = s.stock_id WHERE t.user_id = $1 ORDER BY t.transaction_date DESC',
-          [req.session.user.user_id]
-      );
-      res.render('pages/orderhistory', { orders });
-  } catch (error) {
-      console.error('Error fetching order history:', error);
-      res.status(500).send('Internal Server Error');
-  }
-});
-
 app.get('/discover', auth, (req, res) => {
-  res.render('pages/discover'); 
+  res.render('pages/discover', { username: req.session.user.username });
 });
 
 app.post('/logout', (req, res) => {
@@ -297,40 +280,44 @@ app.get('/leaderboard', async (req, res) => {
 // portfolio calculator/controller
 async function getPortfolioData(userId) {
   try {
-    // Retrieve user information.
+    // 1) Get user info
     const userResult = await db.one(
-      'SELECT user_id, username, email, balance, created_at FROM users WHERE user_id = $1',
+      `SELECT user_id, username, email, balance, created_at
+       FROM users
+       WHERE user_id = $1`,
       [userId]
     );
     const user = userResult;
 
-    // Retrieve holdings and join with stock details.
+    // 2) Get holdings + live prices
     const holdingsResult = await db.any(
-      `SELECT h.quantity, s.symbol, s.company_name, s.last_price 
-       FROM holdings h 
+      `SELECT h.quantity, s.symbol, s.company_name, s.last_price
+       FROM holdings h
        JOIN stocks s ON h.stock_id = s.stock_id
        WHERE h.user_id = $1`,
       [userId]
     );
-
+    // Refresh live price for each holding
     for (let holding of holdingsResult) {
       try {
-        const res = await fetch(`http://api:8000/api/stock?ticker=${holding.symbol}&live=true`);
-        const [liveData] = await res.json();
-        if (liveData && liveData.price) {
-          holding.last_price = liveData.price;
+        // call your live‐price endpoint:
+        const res = await fetch(`http://api:8000/api/price/${holding.symbol}`);
+        if (res.ok) {
+          const { price } = await res.json();
+          holding.last_price = price;
         }
       } catch (err) {
-        console.error(`Failed to update live price for ${holding.symbol}`, err);
+        console.error(`Failed live price update for ${holding.symbol}:`, err);
       }
     }
 
-    // Calculate the total value of holdings.
-    const holdingsValue = holdingsResult.reduce((acc, holding) => {
-      return acc + parseFloat(holding.quantity) * parseFloat(holding.last_price);
-    }, 0);
+    // 3) Compute total value of current holdings
+    const holdingsValue = holdingsResult.reduce(
+      (sum, h) => sum + parseFloat(h.quantity) * parseFloat(h.last_price),
+      0
+    );
 
-    // Retrieve transactions for display (ordered descending).
+    // 4) Pull all transactions (for display) and also ordered‐asc for FIFO stats
     const transactionsDisplay = await db.any(
       `SELECT t.transaction_date, t.transaction_type, t.quantity, t.price, s.symbol
        FROM transactions t
@@ -339,8 +326,6 @@ async function getPortfolioData(userId) {
        ORDER BY t.transaction_date DESC`,
       [userId]
     );
-
-    // Retrieve transactions for statistics calculations (ordered ascending for FIFO matching).
     const transactionsStats = await db.any(
       `SELECT t.transaction_date, t.transaction_type, t.quantity, t.price, s.symbol
        FROM transactions t
@@ -350,10 +335,7 @@ async function getPortfolioData(userId) {
       [userId]
     );
 
-    // Compute total return: current balance + current holdings value minus initial investment.
-    const totalReturn = parseFloat(user.balance) + holdingsValue - 10000;
-
-    // --- Compute trade-level statistics using FIFO matching ---
+    // 5) Compute realized profit & FIFO matching
     let stats = {
       totalProfit: 0,
       totalTrades: 0,
@@ -361,61 +343,48 @@ async function getPortfolioData(userId) {
       biggestWin: -Infinity,
       biggestLoss: Infinity
     };
+    const buyQueues = {};
 
-    // Create a buy queue for each stock symbol to implement FIFO matching.
-    let buyQueues = {};
+    for (const tx of transactionsStats) {
+      const sym = tx.symbol;
+      const qty = parseFloat(tx.quantity);
+      const prc = parseFloat(tx.price);
+      if (!buyQueues[sym]) buyQueues[sym] = [];
 
-    for (let transaction of transactionsStats) {
-      const symbol = transaction.symbol;
-      const type = transaction.transaction_type;
-      const quantity = parseFloat(transaction.quantity);
-      const price = parseFloat(transaction.price);
-
-      // Initialize queue for the stock if it doesn't exist.
-      if (!buyQueues[symbol]) {
-        buyQueues[symbol] = [];
-      }
-
-      if (type === 'BUY') {
-        // Add buy transaction to the corresponding queue.
-        buyQueues[symbol].push({ quantity, price });
-      } else if (type === 'SELL') {
-        let remaining = quantity;
-        let tradeProfit = 0;
-
-        // Dequeue matching BUY orders for this SELL transaction.
-        while (remaining > 0 && buyQueues[symbol].length > 0) {
-          let buyOrder = buyQueues[symbol][0];
-          let available = buyOrder.quantity;
-          let used = Math.min(remaining, available);
-
-          // Compute profit: (sell price - buy price) * shares sold.
-          tradeProfit += used * (price - buyOrder.price);
-          buyOrder.quantity -= used;
+      if (tx.transaction_type === 'BUY') {
+        buyQueues[sym].push({ quantity: qty, price: prc });
+      } else {
+        let remaining = qty, tradeProfit = 0;
+        while (remaining > 0 && buyQueues[sym].length) {
+          const head = buyQueues[sym][0];
+          const used = Math.min(remaining, head.quantity);
+          tradeProfit += used * (prc - head.price);
+          head.quantity -= used;
           remaining -= used;
-
-          // Remove the buy order if it has been fully matched.
-          if (buyOrder.quantity <= 0) {
-            buyQueues[symbol].shift();
-          }
+          if (head.quantity <= 0) buyQueues[sym].shift();
         }
-
-        // Treat each SELL as closing one aggregated trade.
         stats.totalTrades++;
         stats.totalProfit += tradeProfit;
-        if (tradeProfit > 0) {
-          stats.winningTrades++;
-        }
+        if (tradeProfit > 0) stats.winningTrades++;
         stats.biggestWin = Math.max(stats.biggestWin, tradeProfit);
         stats.biggestLoss = Math.min(stats.biggestLoss, tradeProfit);
       }
     }
 
-    const averageReturn = stats.totalTrades > 0 ? stats.totalProfit / stats.totalTrades : 0;
-    const winRate = stats.totalTrades > 0 ? (stats.winningTrades / stats.totalTrades) * 100 : 0;
-    // Handle cases where no trades were processed.
+    // 6) Compute summary statistics
+    const averageReturn = stats.totalTrades
+      ? stats.totalProfit / stats.totalTrades
+      : 0;
+    const winRate = stats.totalTrades
+      ? (stats.winningTrades / stats.totalTrades) * 100
+      : 0;
     if (stats.biggestWin === -Infinity) stats.biggestWin = 0;
     if (stats.biggestLoss === Infinity) stats.biggestLoss = 0;
+
+    // 7) Total return = (current balance + holdings value) – initial investment
+    const initialInvestment = 10000; 
+    const totalReturn =
+      parseFloat(user.balance) + holdingsValue - initialInvestment;
 
     const statistics = {
       totalReturn: totalReturn.toFixed(2),
@@ -425,9 +394,11 @@ async function getPortfolioData(userId) {
       biggestWin: stats.biggestWin.toFixed(2)
     };
 
+    // 8) Return everything—including realized profit for {{profit}}
     return {
       user,
       balance: user.balance,
+      profit: stats.totalProfit.toFixed(2),
       holdings: holdingsResult,
       transactions: transactionsDisplay,
       statistics
@@ -437,7 +408,6 @@ async function getPortfolioData(userId) {
     throw err;
   }
 }
-
 
 // portfolio page route
 app.get('/portfolio', auth, async (req, res) => {
