@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8" />
-  <title>Paper Trading App</title>
+  <title>Stock Sandbox</title>
   <link rel="stylesheet" href="/style.css" />
   {{>head}}
   {{>nav}}
