@@ -1,0 +1,19 @@
+{{!-- views/pages/discover.hbs --}}
+<div class="discover-container" style="max-width:600px; margin:0 auto; text-align:center; color:#fff; padding:2rem;">
+  <h1>Welcome to <span class="app-name">Stock Sandbox</span>, {{username}}!</h1>
+
+  <p style="margin-top:1.5rem; line-height:1.6;">
+    Stock Sandbox is a risk‑free, simulated trading platform where you can:
+  </p>
+  <ul style="list-style:none; padding:0; margin:1rem 0; line-height:1.6;">
+    <li>🔍 Explore interactive stock charts</li>
+    <li>💼 Practice buying and selling shares</li>
+    <li>📰 Stay up‑to‑date with the latest market news</li>
+    <li>📊 Track your portfolio performance</li>
+  </ul>
+
+  <p style="margin-top:2rem; line-height:1.6;">
+    Use the menu above to jump into charts, trades, news, or your profile settings.  
+    Enjoy your journey in the markets!
+  </p>
+</div>
