@@ -1,43 +1,0 @@
-{{! home.hbs }}
-<!DOCTYPE html>
-<html lang="en">
-<head>
-  <meta charset="UTF-8" />
-  <title>Stock Chart Simulator</title>
-  <link rel="stylesheet" href="/style.css" />
-  <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
-  <script src="https://cdn.jsdelivr.net/npm/chartjs-plugin-zoom@2.0.1/dist/chartjs-plugin-zoom.min.js"></script>
-  <script src="/script.js" defer></script>
-</head>
-<body>
-  <h1>Stock Chart Simulator</h1>
-
-  <div class="controls">
-    <input type="text" id="tickerInput" placeholder="Enter Ticker (e.g., AAPL)" />
-    <label for="periodSelect">Period:</label>
-    <select id="periodSelect">
-      {{#each periods}}
-        <option value="{{this.value}}">{{this.label}}</option>
-      {{/each}}
-    </select>
-  
-    <label for="intervalSelect">Interval:</label>
-    <select id="intervalSelect">
-      {{#each intervals}}
-        <option value="{{this.value}}" {{#if this.selected}}selected{{/if}}>{{this.label}}</option>
-      {{/each}}
-    </select>
-  
-    <button onclick="simulateChart()">Simulate Chart</button>
-    <button onclick="chart.resetZoom()">Reset Zoom</button>
-    <button onclick="startLiveChart()">Start Live Chart</button>
-  </div>
-  
-  <div id="currentPrice">{{currentPrice}}</div>
-  <div id="chartDate" style="margin: 10px 0; font-style: italic;">{{chartDate}}</div>
-
-  <div id="chartContainer">
-    <canvas id="stockChart" width="1000" height="500"></canvas>
-  </div>
-</body>
-</html>
