@@ -1,7 +1,7 @@
 <footer class="text-center color: var(--text-primary); fixed-bottom">
     <script>https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js</script>
     <p>
-        &copy; Copyright 2025 : CSCI 3308 - Paper Trading App
+        &copy; Copyright 2025 : CSCI 3308 - Stock Sandbox
     </p>
 </footer>
 
