@@ -14,11 +14,6 @@
      <div class="collapse navbar-collapse" id="navbar-collapse">
        <ul class="navbar-nav me-auto">
          <li class="nav-item">
-           <a class="nav-link" href="/discover">Discover</a>
-         </li>
-       </ul>
-       <ul class="navbar-nav me-auto">
-         <li class="nav-item">
            <a class="nav-link" href="/chart?symbol=aapl">Chart</a>
          </li>
        </ul>
@@ -30,11 +25,6 @@
        <ul class="navbar-nav me-auto">
          <li class="nav-item">
            <a class="nav-link" href="/leaderboard">Leaderboard</a>
-         </li>
-       </ul>
-       <ul class="navbar-nav me-auto">
-         <li class="nav-item">
-           <a class="nav-link" href="/orderhistory">Order History</a>
          </li>
        </ul>
        <ul class="navbar-nav me-auto">
