@@ -1,2 +1,2 @@
-<title> CSCI 3308 Paper Trader </title>
+<title> CSCI 3308 Stock Sandbox </title>
 
